Migrate to microservices - Testes for User service